[workspace]
resolver = "1"
members = [
    "contracts/spot-vault",
    "contracts/perpetual-vault",
    "contracts/token",
]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true
