[package]
name = "spot-vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = { version = "1.4.0" }
cosmwasm-storage = { version = "1.4.0" }
cw-storage-plus = "1.1.0"
cw-ownable = "0.5.1"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw20-base = { version = "1.1.0", features = ["library"] }
injective-cosmwasm = "0.2.13"
injective-math = "0.1.21"
itertools = "0.11.0"
protobuf = { version = "2", features = ["with-bytes"] }
injective-protobuf = { version = "0.2", git = "https://github.com/InjectiveLabs/cw-injective", branch = "dev" }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0"
