[package]
name = "elixir-token"
version = "1.1.1"
authors = ["Elixir"]
edition = "2021"
description = "Expanded implementation of a CosmWasm-20 compliant token for the Elixir token"
license = "MIT"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw2 = "1.1.0"
cw20 = "1.1.0"
cw20-base = { version = "1.1.0", features = ["library"] }
cosmwasm-std = { version = "1.1" }
snafu = { version = "0.7.5" }
cosmwasm-schema = { version = "1.1" }
